feat : chat server에서 socket connection 분리 2